#ch3 주소체계와 데이터 정렬
<핵심내용>
- IP: 데이터를 송수신할 컴퓨터를 구분하기 위한 값
- Port: 프로그램의 소켓을 구분하기 위한 값
  (IP = 아파트 주소, Port = 동 호수)
- 네트워크를 이용해 데이터를 전송할 때, 네트워크 바이트 순서(빅 엔디안)으로 정리해서 전달한다.

--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -11,6 +11,9 @@
     <Filter Include="src\chapter1">
       <UniqueIdentifier>{f1e4e347-9e1b-4018-a0c9-c7ea2c9a90f1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter3">
+      <UniqueIdentifier>{1f54428d-b172-4539-8a4f-ba851b71a15c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
@@ -20,6 +23,9 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="src\chapter1\entry.h">
       <Filter>src\chapter1</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chapter3\entry.h">
+      <Filter>src\chapter3</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
