#ch4. TCP 기반 서버/클라이언트 1
<핵심내용>
- TCP 서버 호출 스택
    1. socket()                 : 소켓 생성
    2. bind()                   : 소켓 주소 할당
    3. listen()                 : 연결 요청 대기 상태
    3. accept()                 : 연결 요청 수락
    4. read/recv(), write/send(): 데이터 송수신
    5. close/closesocket()      : 연결 종료
- TCP 클라이언트 호출 스택
    1. socket()                 : 소켓 생성
    2. connect()                : 연결 요청
    3. read/recv(), write/send(): 데이터 송수신
    4. close/closesocket()      : 연결 종료

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="src\chapter1\entry.h" />
+    <ClInclude Include="src\chapter4\entry.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
