--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="src\chapter1\entry.h" />
     <ClInclude Include="src\chapter3\entry.h" />
+    <ClInclude Include="src\chapter4\entry.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
