#ch5. TCP 기반 서버/클라이언트 2
<핵심내용>
- 어플리케이션의 특성에 맞게 어플리케이션 프로토콜을 정의
    - 예) [1byte: 버퍼 크기][...]\0], 버퍼의 1바이트는 버퍼의 크기를 뜻함
          recv()가 반환하는 수신된 메시지 크기를 추적해, 해당 크기만큼 recv() 반복 호출
- TCP 소켓은 '슬라이딩 윈도우'라는 프로토콜을 이용해, 순차적으로 버퍼 전송
- TCP 소켓은 Three-way handshaking 방식으로 연결되고 Four-way handshaking 방식으로 열결 해제됨
- SEQ: 응답 값의 기준이 되는 값
- ACK: SEQ + 수신된 버퍼 크기 + 1(정상 수신됐음을 뜻함)

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="src\chapter1\entry.h" />
     <ClInclude Include="src\chapter4\entry.h" />
+    <ClInclude Include="src\chapter5\calc-client.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
