--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -14,6 +14,9 @@
     <Filter Include="src\chapter4">
       <UniqueIdentifier>{6d3ff242-08dc-4fb8-b09d-0a33e9d3a3b2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter5">
+      <UniqueIdentifier>{b43ec7fa-3e3f-4d77-a415-2183d5dd7e9b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
@@ -26,6 +29,9 @@
     </ClInclude>
     <ClInclude Include="src\chapter4\entry.h">
       <Filter>src\chapter4</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chapter5\calc-client.h">
+      <Filter>src\chapter5</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
