--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="src\chapter1\entry.h" />
     <ClInclude Include="src\chapter3\entry.h" />
     <ClInclude Include="src\chapter4\entry.h" />
+    <ClInclude Include="src\chapter5\calc-server.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
