--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -17,6 +17,9 @@
     <Filter Include="src\chapter4">
       <UniqueIdentifier>{5122c858-b962-48b5-9381-b2961b36182e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter5">
+      <UniqueIdentifier>{fb5762b4-48c8-433d-8dfd-eb1036ba9bda}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
@@ -32,6 +35,9 @@
     </ClInclude>
     <ClInclude Include="src\chapter4\entry.h">
       <Filter>src\chapter4</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chapter5\calc-server.h">
+      <Filter>src\chapter5</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
