#ch6. UDP 기반 서버/클라이언트 2
<핵심내용>
- UDP는 1:N 통신이 가능한 신뢰할 수 없는 소켓
- 단, 데이터 송수신 과정에서 목적지 등록/삭제 과정이 존재하기 때문에 오랜 시간 동일한 목적지에 데이터를 송수신하는 것은 비효율적
- 하지만, connect() 함수로 목적지를 등록하면 데이터 전송 과정만 존재하기 때문에 효율적으로 데이터를 송수신할 수 있음

--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -17,6 +17,9 @@
     <Filter Include="src\chapter5">
       <UniqueIdentifier>{b43ec7fa-3e3f-4d77-a415-2183d5dd7e9b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter6">
+      <UniqueIdentifier>{9527d846-14c4-46e9-bead-f578819c31b4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
@@ -33,10 +36,16 @@
     <ClInclude Include="src\chapter5\calc-client.h">
       <Filter>src\chapter5</Filter>
     </ClInclude>
+    <ClInclude Include="src\chapter6\udp_sock.h">
+      <Filter>src\chapter6</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="src\chapter6\udp_sock.cpp">
+      <Filter>src\chapter6</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="client.rc">
