#ch7. 소켓의 우아한 연결종료
<핵심내용>
- 소켓은 입력, 출력 스트림이 존재하며 A 출력 스트림은 B 입력 스트림에 연결됨(B는 반대)
- close() 또는 closesocket() 함수는 소켓 스트림의 완전한 종료를 뜻함
- shutdown() 함수는 단방향 또는 양방향 스트림을 종료할 수 있음
- 예) 파일을 전송하고 응답을 받아야 할 때, 출력 스트림을 종료함으로 EOF 전달해 파일 전송을 끝을 알리며 입력 스트림으로 응답을 받음

--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -20,6 +20,9 @@
     <Filter Include="src\chapter6">
       <UniqueIdentifier>{9527d846-14c4-46e9-bead-f578819c31b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter7">
+      <UniqueIdentifier>{e53f42a5-c41c-412e-a0ce-5443a95f91a6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
@@ -38,6 +41,9 @@
     </ClInclude>
     <ClInclude Include="src\chapter6\udp_sock.h">
       <Filter>src\chapter6</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chapter7\file_client.h">
+      <Filter>src\chapter7</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
