--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="src\chapter5\calc-server.h" />
     <ClInclude Include="src\chapter6\udp_sock.h" />
     <ClInclude Include="src\chapter7\file_server.h" />
+    <ClInclude Include="src\chapter8\entry.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
