#ch9. 소켓의 다양한 옵션
- 소켓에는 다양한 옵션이 존재
- SOCK_SNDBUF, SOCK_RCVBUF: 입/출력 버퍼
- SO_REUSEADDR: 동일한 Port 재할당
- TCP_NODELAY: Nagle 알고리즘
- getsockopt() : 옵션 참조
- setsockopt() : 옵션 설정

--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -23,6 +23,9 @@
     <Filter Include="src\chapter7">
       <UniqueIdentifier>{e53f42a5-c41c-412e-a0ce-5443a95f91a6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\chapter9">
+      <UniqueIdentifier>{1fc7a34d-31b7-4888-a8e8-5e9ee4250c59}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
@@ -44,6 +47,9 @@
     </ClInclude>
     <ClInclude Include="src\chapter7\file_client.h">
       <Filter>src\chapter7</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chapter9\ehco_client.h">
+      <Filter>src\chapter9</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
