#ch12. IO 멀티플렉싱 (Multiplexing)
- 멀티프로세스 서버는 간결하게 작성할 수 있지만, 오버헤드가 발생함
- **멀티플렉싱 기술**을 이용해, 하나의 프로세스로 여러 클라이언트를 연결할 수 있음
- `select()` 함수가 곧 멀티플렉싱을 뜻함
- 여러 클라이언트는 `fd_set` 구조체로 관리됨
    - `FD_ZERO()`, `FD_SET()`, `FD_CLR()`, `FD_ISSET()` 매크로 함수로 `fd_set`구조체 관리
- Linux와 Windows의 파일 디스크립터(소켓)에 할당되는 숫자 공식이 다르기 때문에 사용방법은 똑같지만 함수 내부의 작동 방식은 다름

--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -166,7 +166,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="src\chapter12\ehco_select_serer.h" />
+    <ClInclude Include="src\chapter12\ehco_select_sever.h" />
     <ClInclude Include="src\chapter1\hello_server.h" />
     <ClInclude Include="src\chapter3\network_conv.h" />
     <ClInclude Include="src\chapter4\echo_server.h" />
@@ -183,6 +183,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\chapter12\ehco_select_sever.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="server.rc" />
