#ch13. 다양한 입출력 함수들
- 리눅스와 위도우즈의 `send` & `recv` 입출력 함수의 차이는 사실상 없음
- `send` & `recv` 함수의 마지막 매개변수로 옵션을 설정할 수 있으며, OS에 따라 지원되는 범위가 다름
- `MSG_OOB`는 TCP 환경에서 긴급 메시지이지만, 1바이트 크기만 전송가능하며 실제로 데이터를 더 빠르게 전송하는 것은 아니며, 단순히 독촉하는 것임
- `MSG_PEEK`는 입력 버퍼에 수신된 메시지가 있는지 확인하는 것이지만 단독으로 사용하면 메시지가 수신될 때까지 블로킹 상태로 전환되기 때문에 `MSG_DONTWAIT` 옵션과 함께 사용해야 함
- `readv` & `writev` 함수는 수신, 전송하는 버퍼를 여러 버퍼에 나눠서 관리하는 것으로, 효율적으로 데이터를 수신, 전송하는 방법이다. 때문에 사용할 수 있는 상황이라면 사용하는 것을 권장함(단, 윈도우즈에는 `send` & `recv` 처럼 사실상 동일한 함수가 존재하지 않으며, 다른 WinAPI를 사용해야 함).

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -167,6 +167,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="src\chapter13\oob_client.h" />
     <ClInclude Include="src\chapter1\hello_client.h" />
     <ClInclude Include="src\chapter4\echo_client.h" />
     <ClInclude Include="src\chapter5\calc_client.h" />
@@ -181,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\chapter13\oob_client.cpp" />
     <ClCompile Include="src\chapter1\hello_client.cpp" />
     <ClCompile Include="src\chapter4\echo_client.cpp" />
     <ClCompile Include="src\chapter5\calc_client.cpp" />
