--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <ClInclude Include="Resource.h" />
     <ClInclude Include="src\chapter12\ehco_select_sever.h" />
+    <ClInclude Include="src\chapter13\oob_server.h" />
     <ClInclude Include="src\chapter1\hello_server.h" />
     <ClInclude Include="src\chapter3\network_conv.h" />
     <ClInclude Include="src\chapter4\echo_server.h" />
@@ -184,6 +185,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\chapter12\ehco_select_sever.cpp" />
+    <ClCompile Include="src\chapter13\oob_server.cpp" />
     <ClCompile Include="src\chapter1\hello_server.cpp" />
     <ClCompile Include="src\chapter3\network_conv.cpp" />
     <ClCompile Include="src\chapter4\echo_server.cpp" />
